linked command line tool

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ VS/UhuruAV/module_5_2/Debug/*
 VS/UhuruAV/Debug/*
 VS/UhuruAV/UhuruAV/Debug/*
 VS/UhuruAV/clamav/Debug/*
+VS/UhuruAV/UhuruAV/UhuruScanCommandLine/Debug/*
