--- a/VS/UhuruAV/UhuruScanCommandLine/UhuruScanCommandLine.vcxproj
+++ b/VS/UhuruAV/UhuruScanCommandLine/UhuruScanCommandLine.vcxproj
@@ -58,6 +58,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libuhuru.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
