--- a/VS/UhuruAV/libuhuru/libuhuru.vcxproj
+++ b/VS/UhuruAV/libuhuru/libuhuru.vcxproj
@@ -62,6 +62,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glib-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;gobject-2.0.lib;urlmon.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ModuleDefinitionFile>libuhuru.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -80,6 +81,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <ModuleDefinitionFile>libuhuru.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -104,6 +106,11 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\libuhuru\include\config\libuhuru-config-win32.h" />
     <ClInclude Include="..\..\..\libuhuru\include\config\libuhuru-config.h" />
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\handle.h" />
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\info.h" />
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\module.h" />
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\scan.h" />
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\status.h" />
     <ClInclude Include="..\..\..\libuhuru\src\lib\builtin-modules\mimetypemod.h" />
     <ClInclude Include="..\..\..\libuhuru\src\lib\builtin-modules\remote.h" />
     <ClInclude Include="..\..\..\libuhuru\src\lib\conf.h" />
@@ -119,6 +126,9 @@
     <ClInclude Include="..\..\..\libuhuru\src\lib\reportp.h" />
     <ClInclude Include="..\..\..\libuhuru\src\lib\statusp.h" />
     <ClInclude Include="..\..\..\libuhuru\src\lib\uhurup.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="libuhuru.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
