Uhuru-av-Windows :: build clamav module.

--- a/VS/UhuruAV/clamav/clamav.vcxproj.filters
+++ b/VS/UhuruAV/clamav/clamav.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\Desktop\clamav-0.98.7\win32\Win32\Debug\libclamav.exp">
+      <Filter>Fichiers de ressources</Filter>
+    </None>
+  </ItemGroup>
 </Project>
