Uhuru-av-Windows :: modif chargement modules scan à la demande (module5_2)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ VS/UhuruAV/Debug/*
 VS/UhuruAV/UhuruAV/Debug/*
 VS/UhuruAV/clamav/Debug/*
 VS/UhuruAV/UhuruScanCommandLine/Debug/*
+VS/UhuruAV/UhuruAV.v12.suo
