--- a/VS/UhuruAV/UhuruScanCommandLine/UhuruScanCommandLine.vcxproj
+++ b/VS/UhuruAV/UhuruScanCommandLine/UhuruScanCommandLine.vcxproj
@@ -59,6 +59,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>libuhuru.lib;glib-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;gio-2.0.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\david\Documents\uhuru-av\VS\glib\win32\glib_2.28.8\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
