--- a/VS/UhuruAV/module_5_2/module_5_2.vcxproj
+++ b/VS/UhuruAV/module_5_2/module_5_2.vcxproj
@@ -26,7 +26,9 @@
     <ClCompile Include="..\..\..\modules\module5_2\src\lib\src\vector.c" />
     <ClCompile Include="..\..\..\modules\module5_2\src\lib\src\windows\osdeps.c" />
     <ClCompile Include="..\..\..\modules\module5_2\src\module\module5_2.c" />
-    <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="module5_2.def" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5CEDB44A-6891-4931-802F-8D63981298DD}</ProjectGuid>
@@ -35,7 +37,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -76,6 +78,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>module5_2.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -94,6 +97,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <ModuleDefinitionFile>module5_2.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
