reorganizing sources for on-access and web interface

--- a/libuhuru/configure.ac
+++ b/libuhuru/configure.ac
@@ -100,7 +100,8 @@ include/config/Makefile
 include/libuhuru/Makefile
 pkgconfig/Makefile
 src/Makefile
-src/lib/Makefile
+src/libcore/Makefile
+src/libipc/Makefile
 src/scand/Makefile
 src/on-access/Makefile
 src/on-access/linux/Makefile
