--- a/libuhuru/Makefile.am
+++ b/libuhuru/Makefile.am
@@ -2,15 +2,14 @@ if COND_DOC
 OPT_DOC_DIR=doc
 endif
 
-SUBDIRS=conf include src tests pkgconfig tools $(OPT_DOC_DIR)
+SUBDIRS=conf include src tests pkgconfig $(OPT_DOC_DIR)
 
 TAGDIRS=\
 $(top_srcdir)/doc \
 $(top_srcdir)/include \
 $(top_srcdir)/pkgconfig \
 $(top_srcdir)/src \
-$(top_srcdir)/tests \
-$(top_srcdir)/tools
+$(top_srcdir)/tests 
 
 TAGS:
 	(for d in $(TAGDIRS) ; do find $$d -name '*.c' -o -name '*.h' -o -name '*.txt' -o -name 'Makefile.am' -o -name '*.pc.in' ; done ) | etags -
