--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -1,6 +1,12 @@
 pkginclude_HEADERS= \
-status.h \
-scan.h \
-module.h \
-handle.h \
-info.h
+core.h \
+ipc.h 
+
+nobase_pkginclude_HEADERS= \
+common/action.h \
+common/status.h \
+libcore/handle.h \
+libcore/info.h \
+libcore/module.h \
+libcore/scan.h \
+libipc/ipc.h 
