--- a/libuhuru/src/tools/Makefile.am
+++ b/libuhuru/src/tools/Makefile.am
@@ -1,8 +1,10 @@
+AUTOMAKE_OPTIONS=subdir-objects
+
 bin_PROGRAMS=uhuru-scan uhuru-info
 
 uhuru_scan_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@
 uhuru_scan_LDADD=$(top_builddir)/src/libipc/libuhuru_ipc.la @GLIB2_LIBS@
-uhuru_scan_SOURCES=uhuru-scan.c
+uhuru_scan_SOURCES=uhuru-scan.c ../utils/getopt.c ../utils/getopt.h
 
 uhuru_info_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@ @LIBXML2_CFLAGS@
 uhuru_info_LDADD=$(top_builddir)/src/lib/libuhuru.la @GLIB2_LIBS@ @LIBXML2_LIBS@
