--- a/libuhuru/src/tools/Makefile.am
+++ b/libuhuru/src/tools/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
-bin_PROGRAMS=uhuru-scan uhuru-info
+bin_PROGRAMS=uhuru-scan # uhuru-info later
 
 uhuru_scan_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@
 uhuru_scan_LDADD=$(top_builddir)/src/libipc/libuhuru_ipc.la @GLIB2_LIBS@
@@ -9,6 +9,6 @@ uhuru-scan.c \
 ../utils/getopt.c \
 ../utils/getopt.h
 
-uhuru_info_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@ @LIBXML2_CFLAGS@
-uhuru_info_LDADD=$(top_builddir)/src/lib/libuhuru.la @GLIB2_LIBS@ @LIBXML2_LIBS@
-uhuru_info_SOURCES=uhuru-info.c
+#uhuru_info_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@ @LIBXML2_CFLAGS@
+#uhuru_info_LDADD=$(top_builddir)/src/lib/libuhuru.la @GLIB2_LIBS@ @LIBXML2_LIBS@
+#uhuru_info_SOURCES=uhuru-info.c
