--- a/libuhuru/src/tools/Makefile.am
+++ b/libuhuru/src/tools/Makefile.am
@@ -7,7 +7,9 @@ uhuru_scan_LDADD=$(top_builddir)/src/libipc/libuhuru_ipc.la @GLIB2_LIBS@
 uhuru_scan_SOURCES=\
 uhuru-scan.c \
 ../utils/getopt.c \
-../utils/getopt.h
+../utils/getopt.h \
+../utils/tcpsock.c \
+../utils/tcpsock.h
 
 #uhuru_info_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GLIB2_CFLAGS@ @LIBXML2_CFLAGS@
 #uhuru_info_LDADD=$(top_builddir)/src/lib/libuhuru.la @GLIB2_LIBS@ @LIBXML2_LIBS@
