--- a/libuhuru/configure.ac
+++ b/libuhuru/configure.ac
@@ -11,6 +11,10 @@ AC_ARG_ENABLE([debug],
 # configuration header
 AM_CONFIG_HEADER(include/config/libuhuru-config-autoconf.h)
 
+# for now, add builtin modules by hand
+AC_DEFINE([HAVE_ALERT_MODULE],[1],[Define to compile builtin module alert])
+AC_DEFINE([HAVE_QUARANTINE_MODULE],[1],[Define to compile builtin module quarantine])
+
 # This is needed when the first PKG_CHECK_MODULES call is inside a conditional (not the case here, but who knows)
 PKG_PROG_PKG_CONFIG
 
